--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
 
         @keyframes blink { 0%, 100% { opacity: 1; } 50% { opacity: 0; } }
 
+        /* Nagging Message Animation */
+        @keyframes slideInNag {
+            0% { transform: translateX(120%); opacity: 0; }
+            10% { transform: translateX(0); opacity: 1; }
+            90% { transform: translateX(0); opacity: 1; }
+            100% { transform: translateX(120%); opacity: 0; }
+        }
+        .nag-active { animation: slideInNag 7s cubic-bezier(0.23, 1, 0.32, 1) forwards; }
+
         /* Responsive UI Overrides */
         @media (max-width: 640px) {
             .hero-title { font-size: 3.25rem !important; }
@@ -105,8 +114,7 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^18.2.0",
-    "react-dom": "https://esm.sh/react-dom@^18.2.0",
+    "react": "https://esm.sh/react@^19.2.3",
     "react/": "https://esm.sh/react@^19.2.3/"
   }
 }
@@ -158,10 +166,41 @@
             </svg>
         );
 
-        const InitialRobotMessage = () => {
+        const NaggingMessage = () => {
+            const [show, setShow] = useState(false);
+            const [hasFinished, setHasFinished] = useState(false);
+            
+            useEffect(() => {
+                if (hasFinished) return;
+
+                const initialDelay = setTimeout(() => {
+                    setShow(true);
+                    // Hide forever after 7 seconds (matching animation duration)
+                    setTimeout(() => {
+                        setShow(false);
+                        setHasFinished(true);
+                    }, 7000);
+                }, 2000); // 2 seconds after the intro finished
+
+                return () => clearTimeout(initialDelay);
+            }, [hasFinished]);
+
+            if (!show) return null;
+
+            return (
+                <div className="fixed top-24 right-0 z-[1500] p-4 nag-active">
+                    <div className="glass px-8 py-5 rounded-l-[2rem] border-r-0 border-blue-500 shadow-2xl flex items-center gap-4 bg-blue-900/20">
+                        <div className="w-10 h-10 bg-blue-600 rounded-full flex items-center justify-center text-xl shadow-lg shadow-blue-600/30">🤔</div>
+                        <p className="text-xl sm:text-2xl font-black text-white" style={{ direction: 'rtl' }}>مش دعيت ليه ؟؟</p>
+                    </div>
+                </div>
+            );
+        };
+
+        const InitialRobotMessage = ({ onFinish }) => {
             const [isVisible, setIsVisible] = useState(false);
             const [typedText, setTypedText] = useState("");
-            const [phase, setPhase] = useState(0); // 0: initial delay, 1: typing main, 2: typing boss part, 3: done
+            const [phase, setPhase] = useState(0); 
             
             const mainText = "جميع هذه الأسئلة تم إنشاؤها بواسطة الذكاء الاصطناعي.. ";
             const bossText = "ما تنسوش تدعوا للـ Boss";
@@ -202,9 +241,13 @@
 
             if (!isVisible) return null;
 
-            // Splitting text for special "Boss" styling
             const displayMain = typedText.includes(mainText) ? mainText : typedText;
             const displayBoss = typedText.includes(mainText) ? typedText.replace(mainText, "") : "";
+
+            const closeMessage = () => {
+                setIsVisible(false);
+                onFinish();
+            };
 
             return (
                 <div className="fixed inset-0 z-[2000] flex items-center justify-center p-6 bg-black/85 backdrop-blur-md animate-in fade-in duration-500">
@@ -228,7 +271,7 @@
                         </div>
 
                         <div className={`mt-10 transition-all duration-700 ${phase === 3 ? 'opacity-100 translate-y-0' : 'opacity-0 translate-y-10 pointer-events-none'}`}>
-                            <button onClick={() => setIsVisible(false)} className="w-full py-6 bg-blue-600 hover:bg-blue-500 rounded-2xl font-black text-xl transition-all shadow-xl shadow-blue-600/30 active:scale-95 uppercase tracking-widest">
+                            <button onClick={closeMessage} className="w-full py-6 bg-blue-600 hover:bg-blue-500 rounded-2xl font-black text-xl transition-all shadow-xl shadow-blue-600/30 active:scale-95 uppercase tracking-widest">
                                 ENTER HUB
                             </button>
                         </div>
@@ -322,6 +365,7 @@
         const App = () => {
             const [active, setActive] = useState(null);
             const [quote, setQuote] = useState(QUOTES[0]);
+            const [introFinished, setIntroFinished] = useState(false);
 
             useEffect(() => {
                 const i = setInterval(() => setQuote(QUOTES[Math.floor(Math.random() * QUOTES.length)]), 12000);
@@ -382,7 +426,8 @@
                         </footer>
                     </main>
 
-                    <InitialRobotMessage />
+                    <InitialRobotMessage onFinish={() => setIntroFinished(true)} />
+                    {introFinished && <NaggingMessage />}
                     {active && <QuizModal quiz={active} onClose={() => setActive(null)} />}
                 </div>
             );
